--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,4 @@
+version: 2
 builds:
 - id: kns
   env:
@@ -12,7 +13,7 @@ builds:
 archives:
 - id: kns
   name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-  format: tar.gz
+  formats: [ tar.gz ]
   files:
   - LICENSE
   wrap_in_directory: false
