--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,8 +1,15 @@
 version: 2
+##
 builds:
 - id: kns
   env:
   - CGO_ENABLED=0
+  ldflags:
+  - -s
+  - -w
+  - -X main.version={{.Tag}}
+  - -X main.gitHash={{.FullCommit}}
+  - -X main.buildDate={{.Date}}
   goos:
   - linux
   - darwin
@@ -11,6 +18,7 @@ builds:
   - amd64
   main: ./main.go
   binary: kns
+#
 archives:
 - id: kns
   name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
